include/rsvg.h


typedef enum {
    RSVG_ERROR_FAILED
} RsvgError;
RSVG_API
GQuark rsvg_error_quark (void) G_GNUC_CONST;
RSVG_API
GType rsvg_error_get_type (void);
RSVG_API
GType rsvg_handle_get_type (void);
typedef struct _RsvgHandle RsvgHandle;
typedef struct _RsvgHandleClass RsvgHandleClass;
typedef struct _RsvgDimensionData RsvgDimensionData;
typedef struct _RsvgPositionData RsvgPositionData;
struct _RsvgHandleClass {
    GObjectClass parent;
    gpointer _abi_padding[15];
};
struct _RsvgHandle {
    GObject parent;
    gpointer _abi_padding[16];
};
struct _RsvgDimensionData {
    int width;
    int height;
    gdouble em;
    gdouble ex;
};
struct _RsvgPositionData {
    int x;
    int y;
};
RSVG_DEPRECATED
void rsvg_cleanup (void);
RSVG_DEPRECATED
void rsvg_set_default_dpi (double dpi);
RSVG_DEPRECATED
void rsvg_set_default_dpi_x_y (double dpi_x, double dpi_y);
RSVG_API
void rsvg_handle_set_dpi (RsvgHandle *handle, double dpi);
RSVG_API
void rsvg_handle_set_dpi_x_y (RsvgHandle *handle, double dpi_x, double dpi_y);
RSVG_API
RsvgHandle *rsvg_handle_new (void);
RSVG_DEPRECATED_FOR(rsvg_handle_read_stream_sync)
gboolean rsvg_handle_write (RsvgHandle   *handle,
                            const guchar *buf,
                            gsize         count,
                            GError      **error);
RSVG_DEPRECATED_FOR(rsvg_handle_read_stream_sync)
gboolean rsvg_handle_close (RsvgHandle *handle, GError **error);
RSVG_API
GdkPixbuf *rsvg_handle_get_pixbuf (RsvgHandle *handle);
RSVG_API
GdkPixbuf *rsvg_handle_get_pixbuf_sub (RsvgHandle *handle, const char *id);
RSVG_API
const char *rsvg_handle_get_base_uri (RsvgHandle *handle);
RSVG_API
void rsvg_handle_set_base_uri (RsvgHandle *handle, const char *base_uri);
RSVG_API
void rsvg_handle_get_dimensions (RsvgHandle *handle, RsvgDimensionData *dimension_data);
RSVG_DEPRECATED_FOR(rsvg_handle_get_geometry_for_layer)
gboolean rsvg_handle_get_dimensions_sub (RsvgHandle        *handle,
                                         RsvgDimensionData *dimension_data,
                                         const char        *id);
RSVG_DEPRECATED_FOR(rsvg_handle_get_geometry_for_layer)
gboolean rsvg_handle_get_position_sub (RsvgHandle       *handle,
                                       RsvgPositionData *position_data,
                                       const char       *id);
RSVG_API
gboolean rsvg_handle_has_sub (RsvgHandle *handle, const char *id);
typedef enum 
{
    RSVG_HANDLE_FLAGS_NONE           = 0,
    RSVG_HANDLE_FLAG_UNLIMITED       = 1 << 0,
    RSVG_HANDLE_FLAG_KEEP_IMAGE_DATA = 1 << 1
} RsvgHandleFlags;
RSVG_API
GType rsvg_handle_flags_get_type (void);
RSVG_API
RsvgHandle *rsvg_handle_new_with_flags (RsvgHandleFlags flags);
RSVG_API
void rsvg_handle_set_base_gfile (RsvgHandle *handle,
                                 GFile      *base_file);
RSVG_API
gboolean rsvg_handle_read_stream_sync (RsvgHandle   *handle,
                                       GInputStream *stream,
                                       GCancellable *cancellable,
                                       GError      **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_gfile_sync (GFile          *file,
                                             RsvgHandleFlags flags,
                                             GCancellable   *cancellable,
                                             GError        **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_stream_sync (GInputStream   *input_stream,
                                              GFile          *base_file,
                                              RsvgHandleFlags flags,
                                              GCancellable   *cancellable,
                                              GError        **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_data (const guint8 *data, gsize data_len, GError **error);
RSVG_API
RsvgHandle *rsvg_handle_new_from_file (const gchar *filename, GError **error);